syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "proto";


message DataPoint {
   google.protobuf.Timestamp timestamp = 1; 
   int32 id = 2;
   float confidence = 3;
   float norm_pos_x = 4;
   float norm_pos_y = 5;
   int32 pupil_diameter = 6;
} 

service Agent {
    rpc Process(stream DataPoint) returns (google.protobuf.Empty);
}
